# cord

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: crypto.rs  errors.rs  lib.rs  main.rs
src/contacts/: blob.rs  contact.rs  mod.rs  store.rs
src/discovery/: mdns.rs  mod.rs
src/identity/: mod.rs  store.rs
src/messaging/: frame.rs  mod.rs  queue.rs
src/noise/: mod.rs  sas.rs  stream.rs
src/runtime/: events.rs  mod.rs  retry.rs
src/transport/: lan.rs  mod.rs  onion.rs
src/tui/: input.rs  layout.rs  mod.rs  theme.rs  view.rs
tests/: lan_handshake.rs  lan_message.rs
